WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
245718
Fix calculation of direction for text form control elements with dir="auto"
https://bugs.webkit.org/show_bug.cgi?id=245718
Summary
Fix calculation of direction for text form control elements with dir="auto"
Frédéric Wang Nélar
Reported
2022-09-26 21:40:00 PDT
It's calling HTMLElement::directionalityIfDirIsAuto here but this function may sometime return a nullopt:
https://searchfox.org/wubkat/rev/cf0cfbaf1ad7728a145c06e3539170870bbb913f/Source/WebCore/html/HTMLTextFormControlElement.cpp#825
Attachments
Add attachment
proposed patch, testcase, etc.
Frédéric Wang Nélar
Comment 1
2022-09-26 21:53:53 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/4741
EWS
Comment 2
2022-09-27 21:42:35 PDT
Committed
254943@main
(3c75189741bc): <
https://commits.webkit.org/254943@main
> Reviewed commits have been landed. Closing PR #4741 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2022-09-27 21:43:19 PDT
<
rdar://problem/100490959
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug