Fix calculation of direction for text form control elements with dir="auto" https://bugs.webkit.org/show_bug.cgi?id=245718

Reviewed by Ryosuke Niwa.

For elements with dir="auto", HTMLTextFormControlElement::directionForFormData()
is relying on HTMLElement::directionalityIfDirIsAuto() but this function may
sometimes return a nullopt, so add a fallback value.

* Source/WebCore/html/HTMLTextFormControlElement.cpp:
(WebCore::HTMLTextFormControlElement::directionForFormData const): Fallback to
  LTR when directionalityIfDirIsAuto() returns a nullopt.

Canonical link: https://commits.webkit.org/254943@main